# cryptdoor.online

./: .gitignore  LICENSE  PLAN.md  README.md  SECURITY.md  VPN_BUSINESS_PLAN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.mjs  copy-helper.mjs  download-mihomo.mjs  download-wintun.mjs  make-icon.py  make-tray-icons.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: online.cryptdoor.helper.plist
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: helper_client.rs  mihomo.rs  mod.rs  tun_config.rs
src-tauri/windows/: hooks.nsh
src/lib/: storage.ts  tauri.ts  vless.ts
