[package]
name = "cryptdoor"
version = "0.1.0"
description = "CryptDoor VPN"
authors = ["CryptDoor"]
edition = "2021"
rust-version = "1.77"
default-run = "CryptDoor"

[lib]
name = "cryptdoor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "CryptDoor"
path = "src/main.rs"

[[bin]]
name = "cryptdoor-helper"
path = "src/bin/helper.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
